issue relating to answer choice hovering effect on mobile fixed

--- a/src/components/AnswerChoice/AnswerChoice.css
+++ b/src/components/AnswerChoice/AnswerChoice.css
@@ -40,6 +40,12 @@
     width: 48.5%;
   }
 
+  .answer-choice-div:hover {
+    height: 38%;
+    width: 48.5%;
+    background-color: #f8f4e1;
+  }
+
   .answer-choice-text {
     font-size: 4vw;
   }
